# french-gifs

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh
binaries/: librgbmatrix.so.1
src/: board.rs  main.rs  slack_data.rs
